--- a/app/assets/stylesheets/api/session-form.scss
+++ b/app/assets/stylesheets/api/session-form.scss
@@ -24,7 +24,8 @@ input[type=text], input[type=password] {
   height: 30px;
 }
 
-.login-form-button {
+// TODO this button styling needs to be factored out!
+.login-form-button, .story-publish-button {
   color: #FF3399;
 }
 
