--- a/app/assets/stylesheets/base/reset.scss
+++ b/app/assets/stylesheets/base/reset.scss
@@ -1,6 +1,6 @@
-html, body, header, nav, h1, a,
+html, body, header, nav, h1, h2, h3, a,
 ul, li, strong, main, button, i,
-section, img, div, h2, p, form,
+section, img, div, p, form,
 fieldset, label, input, textarea,
 span, article, footer, time, small {
   margin: 0;
