--- a/app/assets/stylesheets/api/navbar.css
+++ b/app/assets/stylesheets/api/navbar.css
@@ -1,11 +1,11 @@
 .navbar {
   display: flex;
-  width: 80%;
+  /*width: 100%;*/
   justify-content: space-between;
   align-items: center;
   border-bottom: 1px solid lightgrey;
   margin: auto;
-  padding: 20px 0;
+  padding: 20px 30px 10px 30px;
 }
 
 .navbar nav {
