--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,7 +16,8 @@
 
  body {
    color: #343336;
-   font-family: sans-serif;
+   font-family: 'Open Sans', sans-serif;
+   font-size: 14px;
  }
 
  .logo {
