Direct user from Write Story to login if not logged in, style StoriesIndex and Thumbs

--- a/app/assets/stylesheets/api/session-form.scss
+++ b/app/assets/stylesheets/api/session-form.scss
@@ -25,8 +25,12 @@ input[type=text], input[type=password] {
 }
 
 // TODO this button styling needs to be factored out!
-.login-form-button, .story-publish-button {
+.login-button, .story-publish-button {
   color: #FF3399;
+}
+
+p .login-button {
+  padding-left: 3px;
 }
 
 .demo-login-button {
