--- a/app/assets/stylesheets/api/stories.scss
+++ b/app/assets/stylesheets/api/stories.scss
@@ -5,38 +5,37 @@
 //************ StoryIndex styles ***************************************
 .stories-index {
   width: 80%;
-  // height: auto;
   border: 1px solid lightgrey;
   margin: 5% auto;
-  padding: 20px;
-  // display: flex;
+  // padding: 20px;
+  display: flex;
+  flex-wrap: wrap-reverse;
 }
-// TODO How to make this container have a height that corresponds to the content height?
 
-.stories-index-content {
-  margin: auto;
-}
+// TODO How to make this container have a height that corresponds to
+// the content height? This is done with .stories-index:after { clear: both }
+// but I started using flexbox, and it handles that automatically, sweet :)
 
 //************ StoryIndexThumb styles **********************************
 .story-thumb-box {
-  // display: block;
-  float: left;
+  flex-grow: 1;
+  flex-basis: 360px;
   border: 1px solid lightgrey;
-  width: 300px;
-  max-height: 300px;
-  padding: 5px;
-  margin: 5px;
+  height: 250px;
+  padding: 2%;
+  margin: 1%;
+  position: relative;
 }
 
-.story-thumb-content {
-
-}
-
-.story-thumb-content h1 {
+.story-thumb-box h1 {
   font-size: 18px;
   font-weight: 700;
 }
 
+.story-thumb-box .user-info-thumb {
+  position: absolute;
+  bottom: 5%;
+}
 
 //************ ShowStory styles ****************************************
 .story {
