--- a/app/assets/stylesheets/api/session-form.scss
+++ b/app/assets/stylesheets/api/session-form.scss
@@ -14,12 +14,11 @@
   margin: 0 auto;
 }
 
-// asterisk selector matches each child
 .session-form * {
   margin-bottom: 10px;
 }
 
-input[type=text], input[type=password] {
+.session-form input[type=text], input[type=password] {
   border: 1px solid lightgrey;
   height: 30px;
 }
@@ -39,6 +38,6 @@ p .login-button {
 }
 
 .session-errors {
-  padding-top: 10px;
+  margin-top: 10px;
   color: orange;
 }
