--- a/app/assets/stylesheets/api/user_profile.scss
+++ b/app/assets/stylesheets/api/user_profile.scss
@@ -1,23 +1,14 @@
 
 .user-profile {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   border-bottom: 1px solid lightgrey;
   padding: 12px;
 }
 
-.user-profile-feed {
-  margin-top: 30px;
-  // border: 1px solid lightgrey;
-}
-
-.user-profile-feed h2 {
-  font-weight: 700;
-  font-size: 16px;
-  padding: 12px;
-}
-
 .user-text {
+  width: 70%;
 }
 
 .user-profile img {
@@ -30,9 +21,38 @@
   padding-bottom: 8px;
 }
 
+.follows {
+  // border: 1px solid lightgrey;
+  padding: 8px 8px 8px 0;
+  margin: 20px 0;
+}
+
+.follows p span {
+  padding: 5px;
+}
+
+.follows button {
+  border: 1px solid orange;
+  border-radius: 20px;
+  margin-top: 15px;
+  padding: 8px 12px;
+  height: 22px;
+}
+
 .user-image-large {
   width: 100px;
   height: 100px;
   border-radius: 100%;
   // border: 1px solid lightgrey;
+}
+
+.user-profile-feed {
+  margin-top: 30px;
+  // border: 1px solid lightgrey;
+}
+
+.user-profile-feed h2 {
+  font-weight: 700;
+  font-size: 16px;
+  padding: 12px;
 }
