--- a/app/assets/stylesheets/base/layout.scss
+++ b/app/assets/stylesheets/base/layout.scss
@@ -2,7 +2,7 @@
 // TODO curently only used in user_profile.jsx, expand possibly
 // to show_story.jsx, probs not to the main index...
 .main-content {
-  width: 50%;
+  max-width: 50%;
   min-width: 400px;
   margin: 8%  auto;
 }
