--- a/app/assets/stylesheets/api/comments.scss
+++ b/app/assets/stylesheets/api/comments.scss
@@ -8,12 +8,25 @@
 }
 
 .comment-item {
-  border: 1px solid lightgrey;
+  // border: 1px solid lightgrey;
+  border: 1px solid rgba(0,0,0,.09);
+  box-shadow: 0 1px 4px rgba(0,0,0,.04);
   border-radius: 3px;
   margin-top: 15px;
   padding: 10px;
+
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .comment-item p {
   padding: 10px 0;
+  font-size: 16px;
+  color: rgba(0,0,0,.8); //Mediums comment text color...
+  width: 100%;
 }
+
+.comment-item button {
+  color: orange;}
