Fix bug where user profile link in comments linked to users/undefined. It now links to the correct user.

--- a/app/assets/stylesheets/api/stories.scss
+++ b/app/assets/stylesheets/api/stories.scss
@@ -83,6 +83,11 @@
   padding-left: 5px;
 }
 
+.story-info .edit-links *:hover {
+  color: orange;
+}
+
+
 //************ StoryForm styles ****************************************
 .story-form {
   // border: 1px solid lightgrey;
