Increase margin around story subtitle

--- a/app/assets/stylesheets/api/comments.scss
+++ b/app/assets/stylesheets/api/comments.scss
@@ -27,6 +27,7 @@
   font-size: 16px;
   color: rgba(0,0,0,.8); //Mediums comment text color...
   width: 100%;
+  white-space: pre-line;
 }
 
 .comment-item button {
