--- a/app/assets/stylesheets/api/session-form.scss
+++ b/app/assets/stylesheets/api/session-form.scss
@@ -2,20 +2,39 @@
   border: 1px solid lightgrey;
   border-radius: 5px;
   width: 260px;
+  height: 320px;
   margin: auto;
   margin-top: 15%;
   padding: 2%;
   background: #FFFFFF;
+
+  animation-name: fromBottom;
+  animation-duration: 0.75s;
+  z-index: 2000;
+  zoom: 1.2;
+}
+
+.session-form-modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(150, 150, 150, 0.5);
+  width: 100%;
+  height: 100%;
+  animation-name: fadeIn;
+  animation-duration: 0.5s;
+  z-index: 2000;
 }
 
 .session-form {
-  // border: 1px solid grey;
   width: 80%;
-  margin: 0 auto;
+  margin: 20px auto 20px auto;
 }
 
 .session-form * {
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 
 .session-form input[type=text], input[type=password] {
