--- a/app/assets/stylesheets/base/layout.scss
+++ b/app/assets/stylesheets/base/layout.scss
@@ -1,8 +1,32 @@
 
-// TODO curently only used in user_profile.jsx, expand possibly
-// to show_story.jsx, probs not to the main index...
-.main-content {
-  max-width: 50%;
-  min-width: 400px;
-  margin: 8%  auto;
+@media only screen and (min-width:500px){
+  // .main-content wraps around .story, .user-profile, and .story-form,
+  // not .stories-index though
+  .main-content {
+    max-width: 50%;
+    min-width: 400px;
+    margin: 8%  auto;
+  }
+}
+
+@media only screen and (max-width:499px){
+  // .main-content wraps around .story, .user-profile, and .story-form,
+  // not .stories-index though
+  .main-content {
+    width: 90%;
+    margin: 6% auto;
+  }
+
+  .stories-index {
+    width: 100%;
+    display: block;
+  }
+
+  .navbar * {
+    padding: 0;
+  }
+
+  .story-form {
+    width: 100%;
+  }
 }
