--- a/app/assets/stylesheets/api/stories.scss
+++ b/app/assets/stylesheets/api/stories.scss
@@ -4,7 +4,7 @@
 
 //************ StoryIndex styles ***************************************
 .stories-index {
-  width: 70%;
+  width: 80%;
   margin: 5% auto;
   display: flex;
   flex-wrap: wrap;
@@ -16,10 +16,15 @@
   flex-basis: 360px;
   border: 1px solid lightgrey;
   border-radius: 3px;
-  height: 220px;
+  height: 250px;
   padding: 2%;
   margin: 1%;
   position: relative;
+}
+
+.story-thumb-box:hover {
+  box-shadow: 0 1px 4px rgba(0,0,0,.04);
+  border: 1px solid rgba(0,0,0,.09);
 }
 
 .story-thumb-box h1 {
@@ -94,7 +99,7 @@
 .story-form {
   width: 100%;
   margin: 5% auto;
-  padding: 10px;
+  // padding: 10px;
 }
 
 .story-form * {
