--- a/app/assets/stylesheets/api/stories.scss
+++ b/app/assets/stylesheets/api/stories.scss
@@ -36,6 +36,7 @@
 .story-thumb p, .story-thumb h3 {
   font-size: 16px;
   color: rgba(0,0,0,.7);
+  white-space: pre-line;
 }
 
 .story-thumb .user-thumb {
