--- a/app/assets/stylesheets/api/navbar.css
+++ b/app/assets/stylesheets/api/navbar.css
@@ -4,7 +4,8 @@
   align-items: center;
   border-bottom: 1px solid lightgrey;
   margin: auto;
-  padding: 20px 30px 10px 30px;
+  padding: 30px 30px 20px 30px;
+  font-size: 16px;
 }
 
 .navbar nav {
