--- a/app/assets/stylesheets/api/stories.scss
+++ b/app/assets/stylesheets/api/stories.scss
@@ -95,7 +95,8 @@
 }
 
 .story p {
-  font-size: 20px;
+  font-size: 21px;
+  line-height: 1.58;
   margin-top: 25px;
   padding-bottom: 30px;
   border-bottom: 1px solid lightgrey;
