--- a/app/assets/stylesheets/api/user_profile.scss
+++ b/app/assets/stylesheets/api/user_profile.scss
@@ -70,7 +70,12 @@
 }
 
 .user-profile-feed {
-  margin-top: 30px;
+  margin-top: 35px;
+  max-width: 670px;
+}
+
+.user-profile-feed .story-thumb {
+  margin-bottom: 24px;
 }
 
 .user-profile-feed h2 {
